# logos

./: Cargo.toml
book/src/: attributes.md  callbacks.md
book/src/attributes/: logos.md  token_and_regex.md
examples/: extras.rs  subpatterns.rs
logos-cli/: Cargo.toml
logos-codegen/: Cargo.toml
logos-codegen/src/: leaf.rs  lib.rs
logos-codegen/src/generator/: leaf.rs
logos-codegen/src/parser/: definition.rs  mod.rs
logos-derive/: Cargo.toml
src/: internal.rs  lexer.rs  lib.rs
tests/: Cargo.toml
tests/benches/: bench.rs
tests/tests/: callbacks.rs  crate_.rs  edgecase.rs  simple.rs
