[dependencies]
anyhow = "1.0.57"
clap = {version = "3.1.18", features = ["derive"]}
fs-err = "2.7.0"
logos-codegen = {version = "0.15.0", path = "../logos-codegen"}
proc-macro2 = "1.0.39"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.1"

[features]
# Enables debug messages
debug = ["logos-codegen/debug"]

[package]
name = "logos-cli"
authors = ["Maciej Hirsz <hello@maciej.codes>", "Jérome Eertmans (maintainer) <jeertmans@icloud.com>"]
categories = ["parsing", "text-processing"]
description = "Create ridiculously fast Lexers"
edition = "2021"
homepage = "https://logos.maciej.codes/"
keywords = ["lexer", "lexical", "tokenizer", "parser", "no_std"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/maciejhirsz/logos"
rust-version = "1.65.0"
version = "0.15.0"

[package.metadata.release]
shared-version = true
