[dependencies]
beef = "0.5.0"
fnv = "1.0.6"
lazy_static = "1.4.0"
proc-macro2 = "1.0.9"
quote = "1.0.3"
regex-syntax = "0.8.2"
syn = { version = "2.0.13", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
# Enables debug messages
debug = []

[lib]
bench = false

[package]
name = "logos-codegen"
authors = ["Maciej Hirsz <hello@maciej.codes>", "Jérome Eertmans (maintainer) <jeertmans@icloud.com>"]
categories = ["parsing", "text-processing"]
description = "Create ridiculously fast Lexers"
edition = "2021"
homepage = "https://logos.maciej.codes/"
keywords = ["lexer", "lexical", "tokenizer", "parser", "no_std"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/maciejhirsz/logos"
rust-version = "1.65.0"
version = "0.15.0"

[package.metadata.release]
shared-version = true
