[dependencies]
logos-codegen = {version = "0.15.0", path = "../logos-codegen"}

[features]
# Enables debug messages
debug = ["logos-codegen/debug"]

[lib]
bench = false
proc-macro = true

[package]
name = "logos-derive"
authors = ["Maciej Hirsz <hello@maciej.codes>", "Jérome Eertmans (maintainer) <jeertmans@icloud.com>"]
categories = ["parsing", "text-processing"]
description = "Create ridiculously fast Lexers"
edition = "2021"
homepage = "https://logos.maciej.codes/"
keywords = ["lexer", "lexical", "tokenizer", "parser", "no_std"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/maciejhirsz/logos"
rust-version = "1.65.0"
version = "0.15.0"

[package.metadata.release]
shared-version = true
